--- a/test.html
+++ b/test.html
@@ -31,7 +31,14 @@ dsfadf
   </head>
   <body>
     <script>
-	document.write(feed.title)
+    
+
+
+
+
+
+
+trestsas	    document.write(feed.title)
 	</script>
     <div id="feed"></div>
   </body>
